<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent" android:layout_width="match_parent"
	android:orientation="vertical">
	<LinearLayout style="@style/NavigationBar">
		<ImageButton android:layout_width="wrap_content"
			android:layout_gravity="center_vertical" android:layout_margin="5dp"
			android:src="@drawable/checklist_nav" android:id="@+id/change_checklist"
			android:layout_height="wrap_content" android:background="@drawable/nav_bar_back_button"></ImageButton>
		<TextView android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:textColor="@color/opaque_white"
			android:gravity="center" android:textSize="22dp" android:textStyle="bold"
			android:text="@string/checklist_activity_name" android:ellipsize="end"
			android:id="@+id/checklist_name" android:inputType="text"
			android:layout_weight="1"></TextView>
		<ImageButton android:layout_gravity="center_vertical"
			android:id="@+id/hide_done_tasks_button"
			android:layout_height="wrap_content" android:background="@drawable/nav_bar_button_multi_left" android:layout_marginBottom="5dp" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:src="@drawable/hide_done_tasks_button" android:layout_width="40dp"></ImageButton>
		<ImageButton android:layout_gravity="center_vertical"
			android:id="@+id/quick_add_button"
			android:layout_height="wrap_content" android:src="@drawable/quick_add_nav"
			android:layout_width="50dp" android:background="@drawable/nav_bar_button_multi_right" android:layout_marginBottom="5dp" android:layout_marginRight="5dp" android:layout_marginTop="5dp"></ImageButton>
		<Button android:id="@+id/done_button" android:layout_gravity="center_vertical"
			android:background="@drawable/nav_bar_ok_button"
			android:layout_margin="5dp" android:layout_width="68dp"
			android:textSize="16dp" android:textColor="@color/nav_bar_button_label"
			android:gravity="center" android:text="@string/done_button"
			android:visibility="gone" android:layout_height="32dp"></Button>
	</LinearLayout>
	<EditText android:id="@+id/quick_add_text"
		android:layout_width="match_parent" android:inputType="text|textCapSentences|textMultiLine"
		android:hint="@string/quick_add_task_text_hint" android:background="@drawable/quick_add_background"
		android:layout_height="50dp" android:textColorHint="@color/form_hint_color"></EditText>
	<ListView android:id="@+id/selection_list"
		android:layout_height="match_parent" android:layout_width="match_parent"
		android:choiceMode="singleChoice" android:headerDividersEnabled="false"
		android:footerDividersEnabled="true" android:layout_weight="1"
		android:fadingEdge="none" android:cacheColorHint="#00000000"
		android:background="#00000000"></ListView>
	<LinearLayout style="@style/NavigationBar"
		android:orientation="horizontal" android:layout_height="54dp"
		android:id="@+id/quick_actions_bar">
		<Button android:layout_gravity="center_vertical"
			android:layout_margin="5dp" android:id="@+id/check_button"
			android:text="@string/check_button" android:textColor="@color/nav_bar_button_label"
			android:textSize="18dp" android:background="@drawable/nav_bar_ok_button"
			android:textStyle="bold" android:layout_width="80dp"
			android:layout_weight="1" android:layout_height="match_parent"></Button>
		<Button android:background="@drawable/nav_bar_button"
			android:layout_gravity="center_vertical" android:id="@+id/skip_button" android:text="@string/skip_button"
			android:textSize="18dp" android:textColor="@color/nav_bar_button_label"
			android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_marginBottom="5dp" android:layout_marginRight="5dp" android:layout_marginTop="5dp"></Button>
			<Button android:layout_gravity="center_vertical" android:id="@+id/problem_button" android:text="!"
			android:textColor="@color/nav_bar_button_label"
			android:layout_height="match_parent" android:background="@drawable/nav_bar_problem_button" android:layout_width="40dp" android:textSize="22dp" android:layout_marginBottom="5dp" android:layout_marginRight="5dp" android:layout_marginTop="5dp"></Button>
	</LinearLayout>
</LinearLayout>

